# navegar_web

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: build.yml
openspec/changes/archive/2026-04-26-configure-scroll-human-timers/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-configure-scroll-human-timers/specs/scroll-human-timers/: spec.md
openspec/changes/archive/2026-04-26-configure-scroll-human-timers/specs/scroll-wheel-randomization/: spec.md
openspec/changes/archive/2026-04-26-crear-nuevo-readme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-crear-nuevo-readme/specs/documentacion-readme/: spec.md
openspec/changes/archive/2026-04-26-document-scroll-page-function/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-document-scroll-page-function/specs/scroll-page-docs/: spec.md
openspec/changes/create-web-unit-tests/: design.md  proposal.md  tasks.md
openspec/changes/create-web-unit-tests/specs/web-unit-tests/: spec.md
openspec/changes/validate-development-consistency/: design.md  proposal.md  tasks.md
openspec/changes/validate-development-consistency/specs/code-quality-validation/: spec.md
openspec/changes/validate-development-consistency/specs/pre-commit-hooks/: spec.md
scripts/: quality_check.sh
src/web/: main.py
src/web/navegacion/: pagination.py  render.py  scroll.py
src/web/utilidades/: config.py
tests/: conftest.py  test_navegacion_render.py  test_navegacion_scroll.py  test_utilidades_config.py
