[project]
name = "web"
version = "0.1.0"
description = "Scraper de propiedades con Playwright"
authors = [
    { name = "Luis Diaz" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "playwright>=1.40.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyyaml>=6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"